// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`buildTableHierarchy should generate nodes and hierarchy correctly 1`] = `
Object {
  "belongsCell": undefined,
  "children": Array [
    Object {
      "belongsCell": undefined,
      "children": Array [],
      "colIndex": -1,
      "field": "area",
      "height": 0,
      "id": "root[&]序号",
      "inCollapseNode": undefined,
      "isCollapsed": false,
      "isGrandTotals": false,
      "isLeaf": false,
      "isPivotMode": undefined,
      "isSubTotals": false,
      "isTotalMeasure": false,
      "isTotals": false,
      "key": "area",
      "label": "序号",
      "level": 0,
      "originalHeight": 0,
      "originalWidth": 0,
      "padding": 0,
      "query": Object {
        "area": "序号",
      },
      "rowIndex": undefined,
      "seriesNumberWidth": undefined,
      "toJSON": [Function],
      "value": "序号",
      "width": 0,
      "x": 0,
      "y": 0,
    },
    Object {
      "belongsCell": undefined,
      "children": Array [],
      "colIndex": -1,
      "field": "area",
      "height": 0,
      "id": "root[&]area",
      "inCollapseNode": undefined,
      "isCollapsed": false,
      "isGrandTotals": false,
      "isLeaf": false,
      "isPivotMode": undefined,
      "isSubTotals": false,
      "isTotalMeasure": false,
      "isTotals": false,
      "key": "area",
      "label": "area",
      "level": 0,
      "originalHeight": 0,
      "originalWidth": 0,
      "padding": 0,
      "query": Object {
        "area": "area",
      },
      "rowIndex": undefined,
      "seriesNumberWidth": undefined,
      "toJSON": [Function],
      "value": "area",
      "width": 0,
      "x": 0,
      "y": 0,
    },
    Object {
      "belongsCell": undefined,
      "children": Array [],
      "colIndex": -1,
      "field": "area",
      "height": 0,
      "id": "root[&]province",
      "inCollapseNode": undefined,
      "isCollapsed": false,
      "isGrandTotals": false,
      "isLeaf": false,
      "isPivotMode": undefined,
      "isSubTotals": false,
      "isTotalMeasure": false,
      "isTotals": false,
      "key": "area",
      "label": "province",
      "level": 0,
      "originalHeight": 0,
      "originalWidth": 0,
      "padding": 0,
      "query": Object {
        "area": "province",
      },
      "rowIndex": undefined,
      "seriesNumberWidth": undefined,
      "toJSON": [Function],
      "value": "province",
      "width": 0,
      "x": 0,
      "y": 0,
    },
    Object {
      "belongsCell": undefined,
      "children": Array [],
      "colIndex": -1,
      "field": "area",
      "height": 0,
      "id": "root[&]city",
      "inCollapseNode": undefined,
      "isCollapsed": false,
      "isGrandTotals": false,
      "isLeaf": false,
      "isPivotMode": undefined,
      "isSubTotals": false,
      "isTotalMeasure": false,
      "isTotals": false,
      "key": "area",
      "label": "city",
      "level": 0,
      "originalHeight": 0,
      "originalWidth": 0,
      "padding": 0,
      "query": Object {
        "area": "city",
      },
      "rowIndex": undefined,
      "seriesNumberWidth": undefined,
      "toJSON": [Function],
      "value": "city",
      "width": 0,
      "x": 0,
      "y": 0,
    },
    Object {
      "belongsCell": undefined,
      "children": Array [],
      "colIndex": -1,
      "field": "area",
      "height": 0,
      "id": "root[&]type",
      "inCollapseNode": undefined,
      "isCollapsed": false,
      "isGrandTotals": false,
      "isLeaf": false,
      "isPivotMode": undefined,
      "isSubTotals": false,
      "isTotalMeasure": false,
      "isTotals": false,
      "key": "area",
      "label": "type",
      "level": 0,
      "originalHeight": 0,
      "originalWidth": 0,
      "padding": 0,
      "query": Object {
        "area": "type",
      },
      "rowIndex": undefined,
      "seriesNumberWidth": undefined,
      "toJSON": [Function],
      "value": "type",
      "width": 0,
      "x": 0,
      "y": 0,
    },
    Object {
      "belongsCell": undefined,
      "children": Array [],
      "colIndex": -1,
      "field": "area",
      "height": 0,
      "id": "root[&]sub_type",
      "inCollapseNode": undefined,
      "isCollapsed": false,
      "isGrandTotals": false,
      "isLeaf": false,
      "isPivotMode": undefined,
      "isSubTotals": false,
      "isTotalMeasure": false,
      "isTotals": false,
      "key": "area",
      "label": "sub_type",
      "level": 0,
      "originalHeight": 0,
      "originalWidth": 0,
      "padding": 0,
      "query": Object {
        "area": "sub_type",
      },
      "rowIndex": undefined,
      "seriesNumberWidth": undefined,
      "toJSON": [Function],
      "value": "sub_type",
      "width": 0,
      "x": 0,
      "y": 0,
    },
    Object {
      "belongsCell": undefined,
      "children": Array [],
      "colIndex": -1,
      "field": "area",
      "height": 0,
      "id": "root[&]profit",
      "inCollapseNode": undefined,
      "isCollapsed": false,
      "isGrandTotals": false,
      "isLeaf": false,
      "isPivotMode": undefined,
      "isSubTotals": false,
      "isTotalMeasure": false,
      "isTotals": false,
      "key": "area",
      "label": "profit",
      "level": 0,
      "originalHeight": 0,
      "originalWidth": 0,
      "padding": 0,
      "query": Object {
        "area": "profit",
      },
      "rowIndex": undefined,
      "seriesNumberWidth": undefined,
      "toJSON": [Function],
      "value": "profit",
      "width": 0,
      "x": 0,
      "y": 0,
    },
    Object {
      "belongsCell": undefined,
      "children": Array [],
      "colIndex": -1,
      "field": "area",
      "height": 0,
      "id": "root[&]count",
      "inCollapseNode": undefined,
      "isCollapsed": false,
      "isGrandTotals": false,
      "isLeaf": false,
      "isPivotMode": undefined,
      "isSubTotals": false,
      "isTotalMeasure": false,
      "isTotals": false,
      "key": "area",
      "label": "count",
      "level": 0,
      "originalHeight": 0,
      "originalWidth": 0,
      "padding": 0,
      "query": Object {
        "area": "count",
      },
      "rowIndex": undefined,
      "seriesNumberWidth": undefined,
      "toJSON": [Function],
      "value": "count",
      "width": 0,
      "x": 0,
      "y": 0,
    },
    Object {
      "belongsCell": undefined,
      "children": Array [],
      "colIndex": -1,
      "field": "area",
      "height": 0,
      "id": "root[&]数值",
      "inCollapseNode": undefined,
      "isCollapsed": false,
      "isGrandTotals": false,
      "isLeaf": false,
      "isPivotMode": undefined,
      "isSubTotals": false,
      "isTotalMeasure": false,
      "isTotals": false,
      "key": "area",
      "label": "数值",
      "level": 0,
      "originalHeight": 0,
      "originalWidth": 0,
      "padding": 0,
      "query": Object {
        "area": "数值",
      },
      "rowIndex": undefined,
      "seriesNumberWidth": undefined,
      "toJSON": [Function],
      "value": "数值",
      "width": 0,
      "x": 0,
      "y": 0,
    },
  ],
  "colIndex": -1,
  "field": undefined,
  "height": 0,
  "id": "root",
  "inCollapseNode": undefined,
  "isCollapsed": undefined,
  "isGrandTotals": undefined,
  "isLeaf": undefined,
  "isPivotMode": undefined,
  "isSubTotals": undefined,
  "isTotalMeasure": undefined,
  "isTotals": undefined,
  "key": "",
  "label": "",
  "level": undefined,
  "originalHeight": 0,
  "originalWidth": 0,
  "padding": 0,
  "query": undefined,
  "rowIndex": undefined,
  "seriesNumberWidth": undefined,
  "toJSON": [Function],
  "value": "",
  "width": 0,
  "x": 0,
  "y": 0,
}
`;

exports[`buildTableHierarchy should generate nodes and hierarchy correctly 2`] = `
Hierarchy {
  "allNodesWithoutRoot": Array [
    Object {
      "belongsCell": undefined,
      "children": Array [],
      "colIndex": -1,
      "field": "area",
      "height": 0,
      "id": "root[&]序号",
      "inCollapseNode": undefined,
      "isCollapsed": false,
      "isGrandTotals": false,
      "isLeaf": false,
      "isPivotMode": undefined,
      "isSubTotals": false,
      "isTotalMeasure": false,
      "isTotals": false,
      "key": "area",
      "label": "序号",
      "level": 0,
      "originalHeight": 0,
      "originalWidth": 0,
      "padding": 0,
      "query": Object {
        "area": "序号",
      },
      "rowIndex": undefined,
      "seriesNumberWidth": undefined,
      "toJSON": [Function],
      "value": "序号",
      "width": 0,
      "x": 0,
      "y": 0,
    },
    Object {
      "belongsCell": undefined,
      "children": Array [],
      "colIndex": -1,
      "field": "area",
      "height": 0,
      "id": "root[&]area",
      "inCollapseNode": undefined,
      "isCollapsed": false,
      "isGrandTotals": false,
      "isLeaf": false,
      "isPivotMode": undefined,
      "isSubTotals": false,
      "isTotalMeasure": false,
      "isTotals": false,
      "key": "area",
      "label": "area",
      "level": 0,
      "originalHeight": 0,
      "originalWidth": 0,
      "padding": 0,
      "query": Object {
        "area": "area",
      },
      "rowIndex": undefined,
      "seriesNumberWidth": undefined,
      "toJSON": [Function],
      "value": "area",
      "width": 0,
      "x": 0,
      "y": 0,
    },
    Object {
      "belongsCell": undefined,
      "children": Array [],
      "colIndex": -1,
      "field": "area",
      "height": 0,
      "id": "root[&]province",
      "inCollapseNode": undefined,
      "isCollapsed": false,
      "isGrandTotals": false,
      "isLeaf": false,
      "isPivotMode": undefined,
      "isSubTotals": false,
      "isTotalMeasure": false,
      "isTotals": false,
      "key": "area",
      "label": "province",
      "level": 0,
      "originalHeight": 0,
      "originalWidth": 0,
      "padding": 0,
      "query": Object {
        "area": "province",
      },
      "rowIndex": undefined,
      "seriesNumberWidth": undefined,
      "toJSON": [Function],
      "value": "province",
      "width": 0,
      "x": 0,
      "y": 0,
    },
    Object {
      "belongsCell": undefined,
      "children": Array [],
      "colIndex": -1,
      "field": "area",
      "height": 0,
      "id": "root[&]city",
      "inCollapseNode": undefined,
      "isCollapsed": false,
      "isGrandTotals": false,
      "isLeaf": false,
      "isPivotMode": undefined,
      "isSubTotals": false,
      "isTotalMeasure": false,
      "isTotals": false,
      "key": "area",
      "label": "city",
      "level": 0,
      "originalHeight": 0,
      "originalWidth": 0,
      "padding": 0,
      "query": Object {
        "area": "city",
      },
      "rowIndex": undefined,
      "seriesNumberWidth": undefined,
      "toJSON": [Function],
      "value": "city",
      "width": 0,
      "x": 0,
      "y": 0,
    },
    Object {
      "belongsCell": undefined,
      "children": Array [],
      "colIndex": -1,
      "field": "area",
      "height": 0,
      "id": "root[&]type",
      "inCollapseNode": undefined,
      "isCollapsed": false,
      "isGrandTotals": false,
      "isLeaf": false,
      "isPivotMode": undefined,
      "isSubTotals": false,
      "isTotalMeasure": false,
      "isTotals": false,
      "key": "area",
      "label": "type",
      "level": 0,
      "originalHeight": 0,
      "originalWidth": 0,
      "padding": 0,
      "query": Object {
        "area": "type",
      },
      "rowIndex": undefined,
      "seriesNumberWidth": undefined,
      "toJSON": [Function],
      "value": "type",
      "width": 0,
      "x": 0,
      "y": 0,
    },
    Object {
      "belongsCell": undefined,
      "children": Array [],
      "colIndex": -1,
      "field": "area",
      "height": 0,
      "id": "root[&]sub_type",
      "inCollapseNode": undefined,
      "isCollapsed": false,
      "isGrandTotals": false,
      "isLeaf": false,
      "isPivotMode": undefined,
      "isSubTotals": false,
      "isTotalMeasure": false,
      "isTotals": false,
      "key": "area",
      "label": "sub_type",
      "level": 0,
      "originalHeight": 0,
      "originalWidth": 0,
      "padding": 0,
      "query": Object {
        "area": "sub_type",
      },
      "rowIndex": undefined,
      "seriesNumberWidth": undefined,
      "toJSON": [Function],
      "value": "sub_type",
      "width": 0,
      "x": 0,
      "y": 0,
    },
    Object {
      "belongsCell": undefined,
      "children": Array [],
      "colIndex": -1,
      "field": "area",
      "height": 0,
      "id": "root[&]profit",
      "inCollapseNode": undefined,
      "isCollapsed": false,
      "isGrandTotals": false,
      "isLeaf": false,
      "isPivotMode": undefined,
      "isSubTotals": false,
      "isTotalMeasure": false,
      "isTotals": false,
      "key": "area",
      "label": "profit",
      "level": 0,
      "originalHeight": 0,
      "originalWidth": 0,
      "padding": 0,
      "query": Object {
        "area": "profit",
      },
      "rowIndex": undefined,
      "seriesNumberWidth": undefined,
      "toJSON": [Function],
      "value": "profit",
      "width": 0,
      "x": 0,
      "y": 0,
    },
    Object {
      "belongsCell": undefined,
      "children": Array [],
      "colIndex": -1,
      "field": "area",
      "height": 0,
      "id": "root[&]count",
      "inCollapseNode": undefined,
      "isCollapsed": false,
      "isGrandTotals": false,
      "isLeaf": false,
      "isPivotMode": undefined,
      "isSubTotals": false,
      "isTotalMeasure": false,
      "isTotals": false,
      "key": "area",
      "label": "count",
      "level": 0,
      "originalHeight": 0,
      "originalWidth": 0,
      "padding": 0,
      "query": Object {
        "area": "count",
      },
      "rowIndex": undefined,
      "seriesNumberWidth": undefined,
      "toJSON": [Function],
      "value": "count",
      "width": 0,
      "x": 0,
      "y": 0,
    },
    Object {
      "belongsCell": undefined,
      "children": Array [],
      "colIndex": -1,
      "field": "area",
      "height": 0,
      "id": "root[&]数值",
      "inCollapseNode": undefined,
      "isCollapsed": false,
      "isGrandTotals": false,
      "isLeaf": false,
      "isPivotMode": undefined,
      "isSubTotals": false,
      "isTotalMeasure": false,
      "isTotals": false,
      "key": "area",
      "label": "数值",
      "level": 0,
      "originalHeight": 0,
      "originalWidth": 0,
      "padding": 0,
      "query": Object {
        "area": "数值",
      },
      "rowIndex": undefined,
      "seriesNumberWidth": undefined,
      "toJSON": [Function],
      "value": "数值",
      "width": 0,
      "x": 0,
      "y": 0,
    },
  ],
  "height": 0,
  "indexNode": Array [],
  "maxLevel": 0,
  "sampleNodeForLastLevel": Object {
    "belongsCell": undefined,
    "children": Array [],
    "colIndex": -1,
    "field": "area",
    "height": 0,
    "id": "root[&]序号",
    "inCollapseNode": undefined,
    "isCollapsed": false,
    "isGrandTotals": false,
    "isLeaf": false,
    "isPivotMode": undefined,
    "isSubTotals": false,
    "isTotalMeasure": false,
    "isTotals": false,
    "key": "area",
    "label": "序号",
    "level": 0,
    "originalHeight": 0,
    "originalWidth": 0,
    "padding": 0,
    "query": Object {
      "area": "序号",
    },
    "rowIndex": undefined,
    "seriesNumberWidth": undefined,
    "toJSON": [Function],
    "value": "序号",
    "width": 0,
    "x": 0,
    "y": 0,
  },
  "sampleNodesForAllLevels": Array [
    Object {
      "belongsCell": undefined,
      "children": Array [],
      "colIndex": -1,
      "field": "area",
      "height": 0,
      "id": "root[&]序号",
      "inCollapseNode": undefined,
      "isCollapsed": false,
      "isGrandTotals": false,
      "isLeaf": false,
      "isPivotMode": undefined,
      "isSubTotals": false,
      "isTotalMeasure": false,
      "isTotals": false,
      "key": "area",
      "label": "序号",
      "level": 0,
      "originalHeight": 0,
      "originalWidth": 0,
      "padding": 0,
      "query": Object {
        "area": "序号",
      },
      "rowIndex": undefined,
      "seriesNumberWidth": undefined,
      "toJSON": [Function],
      "value": "序号",
      "width": 0,
      "x": 0,
      "y": 0,
    },
  ],
  "width": 0,
}
`;
